[gd_scene load_steps=5 format=3 uid="uid://bw5mpcq2fmypw"]

[ext_resource type="Script" path="res://scripts/pushable_object.gd" id="1_xo42u"]

[sub_resource type="BoxMesh" id="BoxMesh_ojcbu"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t4g8o"]
albedo_color = Color(0.698039, 0.501961, 0.25098, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_n3k7o"]
size = Vector3(1.5, 1.5, 1.5)

[node name="PushableBox" type="RigidBody3D"]
mass = 10.0
script = ExtResource("1_xo42u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_ojcbu")
surface_material_override/0 = SubResource("StandardMaterial3D_t4g8o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_n3k7o")

[node name="BoxLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
pixel_size = 0.005
text = "Box"
font_size = 64

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_n3k7o")
scale = Vector3(1.5, 1.5, 1.5)

[connection signal="body_entered" from="InteractionArea" to="." method="player_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="player_exited"]
